# data-engineering-project

./: .env.example  .gitignore  PRACOVNI_POSTUP.md  README.md  README_CLOUDERA.md  README_HADOOP.md  accelerated-data-engineering-course.md  docker-compose-bigdata.yml  docker-compose-cloudera.yml  docker-compose.spark-hadoop.yml  pyproject.toml  setup.py  update_hive_config.sh
docker/: docker-compose.yml
docker/airflow/: docker-compose.yml  generate_test_data.py
docker/hadoop/: Dockerfile  docker-compose.hadoop.yml  hadoop-datanode-entrypoint.sh  hadoop-namenode-entrypoint.sh  hadoop-nodemanager-entrypoint.sh  hadoop-resourcemanager-entrypoint.sh
docker/postgres/: Dockerfile  postgresql.conf
docker/spark/: Dockerfile  docker-compose.spark.yml
docs/: architecture.md  setup.md
examples/: cloudera_admin.sh  hadoop_admin.sh  hdfs_basics.py  spark_cloudera.py  spark_hadoop.py
examples/cloudera_demo/: README.md  airflow_workflow.py  atlas_metadata_demo.py  hive-site.xml  run_demo.sh  spark_iceberg_demo.py
examples/pyspark/: README.md  analyza_prodeje.py
hive/: simple_test.hql
project/docs/: cloudera_ecosystem.md  hands_on_spark_exercises.md  spark_architecture.md  spark_best_practices.md
project/src/: generate_spark_data.py  word_count_mapper.py  word_count_reducer.py
scripts/: run_hive_queries.sh  run_spark_analysis.sh  upload_to_hdfs.sh
src/: __init__.py
src/db/: README.md  __init__.py  cli.py
src/etl/: __init__.py  pipeline.py  pipeline_advanced.py
src/examples/: __init__.py  hadoop_example.py  mapreduce_wordcount.py  update_products.py
(+38 files in other folders)
