[project]
name = "data-engineering-project"
version = "0.1.0"
description = "data project"
authors = [
    {name = "Milan Šmíd",email = "smidmi@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "sqlalchemy (<2.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pyspark (>=3.5.5,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "apache-airflow (>=2.10.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
